--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>What the fuck 12 main</h1>
+    <h1>What the fuck 12 main 1</h1>
 </body>
 </html>
